changed literally everything

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="">
     <script src="sketch.js"></script>
-    <script src="player.js"></script>
+    <script src="blob.js"></script>
+    <script src="food.js"></script>
   </head>
   <body>
     <p id="score" hidden> 0</p>
