--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" type="image/png" href="images/bob.png"/>
     <script src="sketch.js"></script>
     <script src="blob.js"></script>
     <script src="food.js"></script>
